# ct_qc_platform

./: PROJECT_CONTEXT.md  README.md  app.py  config.py  inference.py  main.py  phantom_config.json  phantom_profiles.yaml  pyproject.toml  qa_history.db  requirements.txt  requirements_streamlit.txt  rf_ge_tube.pkl  rf_tube.pkl  scanner_profiles.yaml  train_canon_models.py
core/: __init__.py  dicom_loader.py  dose_metadata_extractor.py  metadata_miner.py  pipeline_orchestrator.py  result_aggregator.py  scanner_profiles.py  spatial_sort.py
ct_qc_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboard/: __init__.py  cached_resources.py  config_ui.py  db_manager.py  helpers.py  orchestrator.py  pdf_generator.py  roi_drawing.py  sidebar.py  siemens_waterbath.py  tab_advanced.py  tab_dosimetry.py  tab_hardware_health.py  tab_history.py  tab_predictive.py  tab_summary.py
modules/: __init__.py
plotting/: __init__.py  dosimetry_plotter.py  ed_calibration_plotter.py  mtf_plotter.py  nps_plotter.py  trend_plotter.py
predictive_maintenance/: 1_generate_synthetic_data.py  1_generate_synthetic_data_ge.py  2_train_predictive_models.py  2_train_predictive_models_ge.py  generate_canon_data.py  generate_canon_twin.py  historical_qa_data.csv  historical_qa_data_ge.csv  inference.py  rf_gantry.pkl  rf_ge_detectors.pkl  rf_ge_generator.pkl  rf_ge_table.pkl  rf_ge_tube.pkl  rf_generator.pkl  rf_table.pkl  rf_tube.pkl
tests/: __init__.py  conftest.py  test_advanced_metrics_engine.py  test_basic_metrics.py  test_config.py  test_dicom_loader.py  (+16 more)
(+23 files in other folders)
