[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
package-mode = false
name = "ct-qc-platform"
version = "0.1.0"
description = "CT Simulator Quality Control & Dosimetry Platform for Radiotherapy"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Medical Physics Team"},
]

dependencies = [
    "pydicom>=2.4.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["core*", "modules*", "plotting*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v --cov=. --cov-report=term-missing"
